--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ h1, h2, h3{
     margin-right: 3rem;
     border: 3px solid var(--background-main);
     font-size: 1.25rem;
-    width: 100rem;
+    width: 90%;
     
 }
 
